adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Hello, World !</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nobis veniam at. Dignissimos fugit inventore pariatur sapiente expedita, minus id error itaque aliquid labore maiores iure perspiciatis ab ducimus voluptatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quasi labore vel quae ut voluptatem quaerat debitis, incidunt totam sed nobis repellat veniam accusamus in nemo quibusdam repudiandae non quisquam.</p>
     
 </body>
 </html>
